syntax = "proto3";

package proto;

option go_package = "/proto;proto";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc ForgotPassword (ForgotPasswordRequest) returns (ForgotPasswordResponse);
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc LoginWithGoogle (GoogleAuthRequest) returns (GoogleAuthResponse);
  rpc GoogleAuthCallback (GoogleAuthCallbackRequest) returns (GoogleAuthCallbackResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc GetMe (GetMeRequest) returns (GetMeResponse);
}

// Request and response messages
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string message = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
  string firstName = 4;
  string lastName = 5;
}

message RegisterResponse {
  string message = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string message = 2;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  string message = 1;
}

message ResetPasswordRequest {
  string email = 1;
  string token = 2;
  string new_password = 3;
}

message ResetPasswordResponse {
  string message = 1;
}

message GoogleAuthRequest {}

message GoogleAuthResponse {
  string authUrl = 1;
}

message GoogleAuthCallbackRequest {
  string code = 1;
  string State = 2;
}

message GoogleAuthCallbackResponse {
  string message = 1;
  string userInfo = 2;
  string Token = 3;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  string message = 1;
}

message UpdateUserRequest {
  string email = 1;
  string username = 2;
  string firstName = 3;
  string lastName = 4;
  string picture = 5;
}

message UpdateUserResponse {
  string message = 1;
}

message GetMeRequest {
  string token = 1;
}

message GetMeResponse {
  string email = 1;
  string username = 2;
  string firstName = 3;
  string lastName = 4;
  string picture = 5;
}